--- a/assets/style.scss
+++ b/assets/style.scss
@@ -29,11 +29,6 @@ html {
         text-align: center;
         color: $white;
     }
-    .grid__answer {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        grid-template-rows: 36px;
-    }
     .input__answer {
         margin: 0px 0px 50px 0px;
         height: 2em;
@@ -47,6 +42,7 @@ html {
         border: 1px solid $white;
         background: transparent;
         padding: 5px 20px;
+        cursor: pointer;
     }
     .form-control {
         font-size: $font-size;
