--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,700i");
+
 $font-size: 18px;
 $white: rgba(255, 255, 255, 0.9);
 $white--faded: rgba(255, 255, 255, 0.6);
+$font-family: "Lato", Arial, Helvetica, sans-serif;
 
 html {
     body {
@@ -8,7 +11,7 @@ html {
         width: 100%;
         height: 100%;
         font-size: $font-size;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: $font-family;
     }
 }
 
@@ -22,20 +25,13 @@ html {
     .overlay--center {
         background-image: url(https://dnsmadeeasy.com/assets/images/overlay-center.png);
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
         background-position: center;
     }
     h1 {
         text-align: center;
         color: $white;
-    }
-    .input__answer {
-        margin: 0px 0px 50px 0px;
-        height: 2em;
-        padding: 5px 10px;
-        background: rgba(255, 255, 255, 0.2);
-        box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
-        color: $white;
+        font-weight: 300;
     }
     .btn__submit {
         color: $white;
@@ -66,16 +62,28 @@ html {
     .form-group {
         margin-bottom: 50px;
     }
-    .input__label {
-        color: $white;
-        font-size: 1.1em;
-        margin-bottom: 10px;
-        a {
+    .input {
+        &__answer {
+            margin: 0px 0px 50px 0px;
+            height: 2em;
+            padding: 5px 10px;
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
             color: $white;
         }
-        .fa-question-circle {
-            font-size: 0.8em;
+        &__label {
+            color: $white;
+            font-size: 1.1em;
             margin-bottom: 10px;
+            font-style: italic;
+            font-weight: 700;
+            a {
+                color: $white;
+            }
+            .fa-question-circle {
+                font-size: 0.8em;
+                margin-bottom: 10px;
+            }
         }
     }
     .form__advanced-options {
