--- a/assets/style.scss
+++ b/assets/style.scss
@@ -3,7 +3,10 @@
 $font-size: 18px;
 $white: rgba(255, 255, 255, 0.9);
 $white--faded: rgba(255, 255, 255, 0.6);
-$font-family: "Lato", Arial, Helvetica, sans-serif;
+$font-family: "Lato",
+Arial,
+Helvetica,
+sans-serif;
 
 html {
     body {
@@ -22,17 +25,20 @@ html {
 .section__spf-wizard {
     background-image: linear-gradient(#1ba8de, #5c01e2);
     padding: 100px 0px;
+
     .overlay--center {
         background-image: url(https://dnsmadeeasy.com/assets/images/overlay-center.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
     }
+
     h1 {
         text-align: center;
         color: $white;
         font-weight: 300;
     }
+
     .btn__submit {
         color: $white;
         border: 1px solid $white;
@@ -40,6 +46,7 @@ html {
         padding: 5px 20px;
         cursor: pointer;
     }
+
     .form-control {
         font-size: $font-size;
         color: $white;
@@ -49,47 +56,85 @@ html {
         border-left: none;
         border-radius: 0;
         border-bottom: 2px solid $white;
+
         &::placeholder {
             color: $white--faded;
         }
     }
+
     .form-check-label {
         color: $white;
+
         span {
             color: $white--faded;
         }
     }
+
     .form-group {
         margin-bottom: 50px;
     }
+
     .input {
-        &__answer {
+        &__answer__wrapper {
             margin: 0px 0px 50px 0px;
-            height: 2em;
             padding: 5px 10px;
+            width: 100%;
+            display: grid;
+            grid-template-columns: auto 20px;
+        }
+
+        &__answer {
+            height: 2em;
             background: rgba(255, 255, 255, 0.2);
             box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
             color: $white;
+            width: 100%;
         }
+
+        &__sticky {
+            position: fixed;
+            top: 20px;
+        }
+
         &__label {
             color: $white;
             font-size: 1.1em;
             margin-bottom: 10px;
             font-style: italic;
             font-weight: 700;
+
             a {
                 color: $white;
             }
+
             .fa-question-circle {
                 font-size: 0.8em;
                 margin-bottom: 10px;
             }
         }
     }
+
+    .answer {
+        &__wrapper {
+            display: grid;
+            grid-template-columns: auto 1fr;
+            width: 100vw;
+            max-width: 1000px;
+            grid-gap: 20px;
+        }
+
+        &__copy {
+            float: right;
+            margin-top: 3px;
+            cursor: pointer;
+        }
+    }
+
     .form__advanced-options {
         background: rgba(255, 255, 255, 0.2);
         padding: 20px 30px;
         border-radius: 10px;
+
         &__title {
             color: $white;
             font-size: 1.7em;
