--- a/assets/style.scss
+++ b/assets/style.scss
@@ -89,6 +89,7 @@ html {
             box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
             color: $white;
             width: 100%;
+            border: none !important;
         }
 
         &__sticky {
@@ -124,8 +125,9 @@ html {
         }
 
         &__copy {
-            float: right;
-            margin-top: 3px;
+            color: #fff;
+            margin-left: -25px;
+            margin-top: 7px;
             cursor: pointer;
         }
     }
