--- a/assets/style.scss
+++ b/assets/style.scss
@@ -30,13 +30,15 @@ html {
         background-image: url(https://dnsmadeeasy.com/assets/images/overlay-center.png);
         background-repeat: no-repeat;
         background-size: cover;
+        max-height: 1200px;
         background-position: center;
     }
 
     h1 {
         text-align: center;
         color: $white;
-        font-weight: 300;
+        font-weight: 700;
+        text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
     }
 
     .btn__submit {
@@ -78,6 +80,7 @@ html {
 
         &__answer {
             height: 2em;
+            padding-left: 1em;
             background: rgba(255, 255, 255, 0.2);
             box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
             color: $white;
