--- a/assets/style.scss
+++ b/assets/style.scss
@@ -13,10 +13,10 @@ sans-serif;
 html {
     body {
         box-sizing: border-box;
-        width: 100%;
-        height: 100%;
+        min-height: 100%;
         font-size: $font-size;
         font-family: $font-family;
+        background-color: $secondary;
     }
 }
 
@@ -27,6 +27,7 @@ html {
 .section__spf-wizard {
     background-image: linear-gradient($primary, $secondary);
     padding: 100px 0px;
+    height: 100%;
 
     .overlay--center {
         background-image: url(https://dnsmadeeasy.com/assets/images/overlay-center.png);
